[tool.poetry]
name = "rsa"
version = "0.1.0"
description = "Implementation of the RSA algorithm"
authors = ["Riku Rauhala <riku@rauhala.io>"]

[tool.poetry.dependencies]
invoke = "^1.7.1"
python = "^3.10"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
coverage = "^6.4.4"
pylint = "^2.15.2"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
