[tool.poetry]
name = "rsa-rvr"
version = "0.1.0"
description = "Implementation of the RSA algorithm"
authors = ["Riku Rauhala <riku@rauhala.io>"]

[tool.poetry.dependencies]
invoke = "^1.7.1"
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
colored = "^1.4.3"
coverage = "^6.4.4"
pylint = "^2.15.2"
pytest = "^7.1.3"
rsa = "^4.9"
sympy = "^1.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
